--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@prisma/client": "^7.3.0",
+    "@prisma/client": "6.0.0",
     "@react-oauth/google": "^0.13.4",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.10",
@@ -37,7 +37,7 @@
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
     "pg": "^8.18.0",
-    "prisma": "^7.3.0",
+    "prisma": "6.0.0",
     "razorpay": "^2.9.6",
     "zod": "^3.25.76"
   },
